<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dayEightChallenge.DayEightFirstActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Day Eight Challenge"
        android:textColor="#d333f5"
        android:textAllCaps="true"
        android:textScaleX="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="100dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:background="@drawable/background_edittext"/>


        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/enter_password"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/background_edittext"/>

        <Button
            android:id="@+id/btn_save_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_my_details"
            android:layout_marginTop="100dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>