<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Day Eight Challenge \n\n Please login"
        android:textColor="#d333f5"
        android:textAllCaps="true"
        android:textScaleX="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="50dp"
        android:layout_marginHorizontal="25dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:background="@drawable/background_edittext"/>


        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:hint="@string/enter_password"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/background_edittext"/>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="100dp"/>

    </LinearLayout>



</LinearLayout>
